<resources>
    <string name="app_name">MushScope</string>
    <string name="email_cannot_empty">Email must not be empty!</string>
    <string name="unvalid_email_format">Email format is not valid!</string>
    <string name="name_cannot_empty">Name must not be empty</string>
    <string name="password_cannot_empty">Password must not be empty!</string>
    <string name="password_cannot_contain_space">Password must not contain spaces</string>
    <string name="password_min_8_char">8 characters minimum for password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_analyzer">Analyzer</string>
    <string name="title_setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout Confirmation</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="analyze">Analyze</string>
    <string name="title_login_page">Login Here</string>
    <string name="message_login_page">Welcome back, you’ve been missed!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_signup_page">Complete Your Information Below</string>
    <string name="name">Name</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name_not_valid">Name not valid</string>
    <string name="unvalid_email">Email is not valid</string>
    <string name="reminder_valid_email">Make sure the email format is correct</string>
    <string name="unvalid_password">Password invalid</string>
    <string name="reminder_valid_password">Password must be at least 8 characters long and cannot contain spaces</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="dont_have_account_register">Do not have an account? Register</string>
    <string name="already_have_account_login">Already have an account? Login</string>
    <string name="title_welcome_page">Discover Your Mushroom Here</string>
    <string name="message_welcome_page">Explore all mushrooms in your phone</string>
    <string name="title_profile">Profile</string>
    <string name="btn_history">History</string>
    <string name="profile_name">My name is handsome</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="tflite_is_not_initialized_yet">TFLite is not initialized yet</string>
    <string name="after_analyze">%1$s %2$s</string>
    <string name="result">Result</string>
    <string name="save_result">Save Result</string>
    <string name="classification_result">Identified as %1$s with %2$s confidence</string>
    <string name="no_results_found">No mushroom classification found</string>
    <string name="tflite_initialization_error">TensorFlow Lite initialization failed: %1$s</string>
    <string name="classifier_not_initialized">Image classifier could not be initialized</string>
    <string name="classification_failed">Image classification failed</string>
    <string name="classification_error">Classification error: %1$s</string>
    <string name="history_image">History Image</string>
    <string name="delete_history">Delete</string>
    <string name="no_history_available">No history available</string>
    <string name="history_deleted">History deleted</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirmation_message">Delete this item?</string>
    <string name="delete_confirmation_title">Delete Item</string>
    <string name="result_history">Result: %1$s</string>
    <string name="conf_score_history">Confidence Score: %1$s</string>
    <string name="message_after_login">You successfully logged in. Ready to identify mushrooms?</string>
    <string name="enter">Enter</string>
    <string name="login_failed">Login Failed</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="account_cretaed_message">The account with %1$s has been created.\nLet’s log in and find some mushrooms!!</string>
    <string name="image_required">Image required</string>
    <string name="please_select_image">Please select an image</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="firebaseml_model_download_failed">Model download failed, please check your connection.</string>
    <string name="header_image">Header Image</string>
    <string name="ensiklopedia_mushroom">Mushroom Encyclopedia</string>
    <string name="text_mushroom_header">Find information about poisonous and non-poisonous mushrooms. Learn how to identify different types of mushrooms to protect your health.</string>
    <string name="poisonous_mushroom">Poisonous Mushrooms</string>
    <string name="text_poisonous_mushroom">Poisonous mushrooms are types of mushrooms that contain harmful chemical compounds that can threaten human health if consumed. These compounds, such as amatoxins, gyromitrin, or muscarine, can cause symptoms like nausea, vomiting, diarrhea, and serious damage to vital organs like the liver and kidneys. In some cases, consuming poisonous mushrooms can even be fatal if not treated promptly. The physical appearance of poisonous mushrooms often includes bright colors, unusual patterns, or a slimy surface, although this is not always the case. Some poisonous mushrooms resemble non-poisonous ones, making them difficult to distinguish for untrained individuals. Additionally, the aroma of poisonous mushrooms may be strong, or sometimes nearly odorless, making identification even more challenging. In such cases, knowledge or expert guidance from a mycologist is essential before deciding to consume any mushrooms found in nature.</string>
    <string name="edible_mushroom">Edible Mushrooms</string>
    <string name="text_edible_mushroom">Non-poisonous mushrooms are safe to consume and have numerous health benefits. These mushrooms are commonly used in various dishes because they are delicious and packed with nutrients such as plant protein, fiber, B vitamins, and minerals like selenium and copper. Some non-poisonous mushrooms, such as oyster mushrooms, button mushrooms, and shiitake, are widely cultivated to meet food needs. While they typically have simple appearances and neutral colors, some non-poisonous mushrooms resemble poisonous ones, making identification still important to avoid the risk of misidentification. Moreover, non-poisonous mushrooms generally grow in specific environments like decaying wood, damp soil, or piles of leaves, which are their natural habitats. With proper preparation, non-poisonous mushrooms can be a nutritious and flavorful addition to many dishes.</string>
    <string name="poisonous_mushroom_image">Poisonous Mushroom Image</string>
    <string name="edible_mushroom_image">Edible Mushroom Image</string>
    <string name="profile_title">Profile</string>
    <string name="home">Home</string>
    <string name="model_load_failed">Unable to load machine learning model</string>
    <string name="history">History</string>
    <string name="no_image_selected">No image selected.</string>
    <string name="please_select_an_image_first">Please select an image first.</string>
    <string name="crop_error">Crop Error</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="an_unexpected_error_occurred">Make sure your email exists</string>
    <string name="result_is_saved_to_history">Result is saved to History</string>
</resources>